test/runtime/fail/assignment/already_defined.hy

// expect error: Variable `a` already defined

let a = 3
let a = "hello"
